Correct toplink right side spacing

--- a/themes/clouds/style_rtl.css
+++ b/themes/clouds/style_rtl.css
@@ -11,6 +11,9 @@ body {
 	direction: rtl;
 	text-align: right;
 }
+.toplinks_left {
+padding-right: 10px;
+}
 html {
 	direction: rtl;
 	white-space: normal;
